# OddEngine

./: CMakeLists.txt
cmake/: FindTests.cmake
doc/: Allocator.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/allocator/: allocator.cpp  allocator.h  allocator_tests.cpp  block_allocation.cpp  block_allocation.h  block_allocator.cpp  block_allocator.h  block_allocator_tests.cpp  freelist_allocator.cpp  freelist_allocator.h  freelist_allocator_tests.cpp  linear_allocator.cpp  linear_allocator.h  linear_allocator_tests.cpp  stack_allocator.cpp  stack_allocator.h  stack_allocator_tests.cpp
src/core/util/: pointer_math.cpp  pointer_math.h  pointer_math.inl  pointer_math_tests.cpp
src/tests/: CMakeLists.txt
